# simul

./: .gitignore  LICENSE  README.md  obj_parallelize.py  pyproject.toml  test_numpy.py  test_parallel_range.py  test_threading.py
examples/: user_score.py
scripts/: ast_analysis.py  parallel_callable.py
simul/: __init__.py
src/simul/: __init__.py  over.py  types.py
src/simul/analyze/: __init__.py  analyze.py
src/simul/executor/: __init__.py  executor.py  serial_executor.py  thread_pool_executor.py
src/simul/function/: __init__.py  parallel_function.py  validate.py  visitor.py
tests/: test_analyze.py  test_import.py  test_parallel_executor.py  test_validate.py
